Need to fix overflow issue with pre and code

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -142,5 +142,9 @@
 
   & > pre {
     @apply my-4 whitespace-pre-wrap rounded-lg bg-charcoal p-4 text-white;
+
+    & > code {
+      @apply block whitespace-pre-wrap;
+    }
   }
 }
